--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.0",
     "@hot-loader/react-dom": "^16.8.6",
+    "@types/react-router-dom": "^5.1.5",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -68,6 +69,7 @@
     "react-hot-loader": "^4.12.13",
     "react-is": "^16.12.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.2.0",
     "react-svg-loader": "^2.1.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
